# sandbox

./: .env.cmake  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.bat  todo.todo
assets/models/: cube_with_cells.mtl
misc/problems/: 1.txt  2.txt  3.txt  4.txt  5.txt
source/: IO.cpp  IO.h  app_state.h  application.cpp  application.h  buffer.cpp  buffer.h  buffer_impl.h  camera.cpp  camera.h  debug.cpp  debug.h  depth_buffer.cpp  depth_buffer.h  file_stream.cpp  file_stream.h  file_system_interface.h  graphic_pipeline.cpp  graphic_pipeline.h  imgui.ini  logical_device.cpp  logical_device.h  main.cpp  mesh.cpp  mesh.h  physicalDevice.cpp  physicalDevice.h  primitives.h  problem.cpp  problem.h  problems.cpp  problems.h  renderpass.cpp  renderpass.h  sampler.cpp  sampler.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  (+12 more)
source/imgui/: interface.cpp  interface.h
source/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
